# PortalDoCliente_MetaRH

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/backend/: TabelasGI.py  TabelasLocais.py  aruze_storage.py  database.py  main.py  models.py  schema.py  security.py  settings.py
backend/src/backend/routers/: auth.py  imagens.py  organizacao.py  requisicoes.py  simulacoes.py  usuarios.py
frontend/: .prettierrc  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/Login/: formLogin.tsx  login.ts  page.tsx
frontend/src/app/(auth)/Registrar/: formRegistrar.tsx  page.tsx  registrarUsuario.ts  validarCNPJ.ts
frontend/src/app/Admin/: layout.tsx
frontend/src/app/Admin/Acessos/: loading.tsx  page.tsx  tabelaUsuarios.ts
frontend/src/app/Configuracao/: atualizar.ts  page.tsx
frontend/src/app/Requisicao/: layout.tsx  page.tsx
frontend/src/app/Requisicao/Admissao/: MeusDados.tsx  page.tsx  registrarAdmissao.ts
frontend/src/app/Requisicao/Demissao/: page.tsx  registrarDemissao.ts
frontend/src/app/Requisicao/Orcamento copy/: page.tsx
frontend/src/app/contexts/: MeusDados.tsx  UsuarioContext.tsx
frontend/src/components/Alerta/: index.tsx
frontend/src/components/MenuLateral/: index.tsx
frontend/src/components/Model/: index.tsx
frontend/src/components/Navegador/: imagemUsuario.ts  index.tsx
frontend/src/components/TabelaUsuariosAcessos/: index.tsx
frontend/src/lib/: cockies.ts  decode.ts  token.ts
(+7 files in other folders)
